# COSC-3411-AwqaatGroup

./: Awqaat.spec  KivyNotes.txt  README.md  main.py  nuitka-crash-report.xml  pyproject.toml  requirements.txt
Services/: location_fetcher.py  location_fetcher2.py  prayer_calculation.py
UI_BoilerPlate/: hotbar.kv  main.kv  main.py  screens.kv
UserInterface/: main.kv
main.dist/: libSDL2-2-d9872e50.0.so.0.3000.7  libSDL2_image-2-94bd047c.0.so.0.800.2  libSDL2_mixer-2-600b847e.0.so.0.800.0  libSDL2_ttf-2-df2c5903.0.so.0.2200.0  libXau-00ec42fe.so.6.0.0  libXau-154567c4.so.6.0.0  libasound-2b1a7cda.so.2.0.0  libavformat-6bff7485.so.60.3.100  libavutil-57a5c8b0.so.58.2.100  libbrotlicommon-3ecfe81c.so.1  libbrotlidec-ba690955.so.1  libbz2-a273e504.so.1.0.6  libfontconfig-42c558d2.so.1.11.1  libfreetype-be14bf51.so.6.20.1  libfreetype-c0e61f0c.so.6.14.0  libfribidi-76e53ece.so.0.4.0  libgraphite2-3fca41c8.so.3.0.1  libharfbuzz-77c15733.so.0.10705.0  libharfbuzz-89381d8f.so.0.60850.0  liblcms2-e69eef39.so.2.0.16  liblzma-13fa198c.so.5.4.5  libmp3lame-6e8d37fe.so.0.0.0  libogg-06b1c016.so.0.8.5  libopus-5d29e747.so.0.8.0  libpng15-ce838cd1.so.15.13.0  libpng16-58efbb84.so.16.43.0  libpostproc-42802801.so.57.1.100  libsharpyuv-898c0cb5.so.0.1.0  libssl-389a29ca.so.3  libswresample-cdf677e3.so.4.10.100  libswscale-71f06575.so.7.1.100  libtheoradec-139a705a.so.2.1.1  libtiff-0a86184d.so.6.0.2  libuuid-f64cda11.so.1.3.0  libvpx-f23bfc83.so.9.0.1  libwebp-2fd3cdca.so.7.1.9  libwebpdemux-f2642bcc.so.2.0.15  libwebpmux-d524b4d5.so.3.1.0  libx264-22074bf5.so.164  (+5 more)
src/: main.py  (+1 more)
(+2 files in other folders)
